fix: wrong colors

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ main {
     width: 100vw;
 }
 
+.publish-space {
+    color: #3f6dad;
+    font-weight: 900;
+}
+
 .input-section {
     display: flex;
     align-items: center;
@@ -31,7 +36,7 @@ main {
     border: 1px solid #e6e5e5;
     border-radius: 5px;
     margin: 20px;
-    padding: 8px 0;
+    padding: 8px 0 8px 8px;
     background-color: #fff;
     width: 600px;
     height: 20px;
@@ -69,6 +74,10 @@ main {
 .cloud,
 .more {
     margin-right: 5px
+}
+
+.circle {
+    margin-right: 9px;
 }
 
 .more {
